Fixed display on mobile

--- a/src/scss/layout/headline.scss
+++ b/src/scss/layout/headline.scss
@@ -1,7 +1,7 @@
 @use "../abstracts" as *;
 
 .headline {
-  height: 100vh;
+  height: 100dvh;
 
   >div {
     display: flex;
